<resources>
    <string name="app_name">Easy Lodging</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_filter">Order By:</string>
    <string name="signin_username_text">Username</string>
    <string name="signin_email_text">Email</string>
    <string name="signin_dni_text" translatable="false">DNI</string>
    <string name="signin_password_text">Password</string>
    <string name="signin_repeat_password_text">Repeat Password</string>
    <string name="signin_terms_text">I agree to the T &amp; C</string>
    <string name="signin_button_text">Sign In</string>
    <string name="search_edittext_text">Text to search</string>
    <string name="search_button_text">Search</string>
    <string name="navigation_drawer_bookings_text">My bookings</string>
    <string name="navigation_drawer_map_text">Map</string>
    <string name="navigation_drawer_mode_text">Dark Mode</string>
    <string name="navigation_drawer_language_text">Language</string>
    <string name="navigation_drawer_info_text">About</string>
    <string name="navigation_drawer_logout_text">Log Out</string>
    <string name="booking_filter_filterby_text">Filter by:</string>
    <string name="booking_filter_type_text">Type:</string>
    <string name="booking_filter_status_text">Status:</string>
    <string name="advance_filter_capacity_text">Capacity</string>
    <string name="advance_filter_capacity_number" translatable="false">100</string>
    <string name="advance_filter_type_text">Type</string>
    <string name="advance_filter_agrotourism_text">Agrotourism</string>
    <string name="advance_filter_hostal_text">Hostal</string>
    <string name="advance_filter_camping_text">Camping</string>
    <string name="advance_filter_cottage_text">Cottage</string>
    <string name="advance_filter_territory_text">Territory</string>
    <string name="advance_filter_vizcaya_text" translatable="false">Vizcaya</string>
    <string name="advance_filter_guipuzcoa_text" translatable="false">Guipuzcoa</string>
    <string name="advance_filter_alava_text" translatable="false">Alava</string>
    <string name="advance_filter_distance_textview">Distance</string>
    <string name="advance_filter_distance_number" translatable="false">50km</string>
    <string name="content_main_test">TEST!!</string>
    <string name="dialog_logoff">We have to change this</string>
    <string name="error_message_text">You need to accept the T&amp; C!</string>
    <string name="not_filled">You need to fill every field</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tc_title_text">Terms and Conditions</string>
    <string name="tc_message_text">We have 5 on the proyect</string>
    <string name="general_error" translatable="false">ERROR</string>
    <string name="navigation_drawer_search_text">Search</string>
    <string name="action_booking">Book</string>
    <string name="title_activity_lodging_details">Details</string>
    <string name="not_accepted">Not Accepted</string>
    <string name="nav_grid_item" translatable="false">Grid</string>
    <string name="dialog_about">This is the about dialog.</string>
    <string name="future_implementation">Not funcional</string>
    <string name="lodging_booking_button">Book</string>
    <string name="lodging_name">Name</string>
    <string name="lodging_type">Type</string>
    <string name="lodging_capacity_text">Capacity:</string>
    <string name="lodging_category">Category:</string>
    <string name="lodging_territory" translatable="false">Territory</string>
    <string name="lodging_address" translatable="false">Address</string>
    <string name="lodging_web" translatable="false">Web</string>
    <string name="lodging_mail" translatable="false">Email</string>
    <string name="lodging_phone" translatable="false">Phone</string>
    <string name="lodging_description" translatable="false">Description</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
