<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lodging_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lodging_icon_image"
            android:layout_width="234dp"
            android:layout_height="239dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_camping" />

        <TextView
            android:id="@+id/lodging_name_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lodging_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_icon_image" />

        <TextView
            android:id="@+id/lodging_type_textview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/lodging_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_name_textview" />

        <TextView
            android:id="@+id/lodging_capacity_textview"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/lodging_capacity_text"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lodging_type_textview"
            app:layout_constraintTop_toTopOf="@+id/lodging_type_textview" />

        <TextView
            android:id="@+id/lodging_capacity_number_textview"
            android:layout_width="35dp"
            android:layout_height="20dp"
            android:text="1000"
            app:layout_constraintStart_toEndOf="@+id/lodging_capacity_textview"
            app:layout_constraintTop_toTopOf="@+id/lodging_capacity_textview" />

        <TextView
            android:id="@+id/lodging_category_textview"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:text="@string/lodging_category"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lodging_capacity_number_textview"
            app:layout_constraintTop_toTopOf="@+id/lodging_capacity_number_textview" />

        <TextView
            android:id="@+id/lodging_category_letter_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="S"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lodging_category_textview"
            app:layout_constraintTop_toTopOf="@+id/lodging_category_textview" />

        <TextView
            android:id="@+id/lodging_territory_textview"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lodging_territory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_category_letter_textview" />

        <TextView
            android:id="@+id/lodging_address_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lodging_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_territory_textview" />

        <TextView
            android:id="@+id/lodging_web_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lodging_web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_address_textview" />

        <TextView
            android:id="@+id/lodging_mail_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lodging_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_web_textview" />

        <TextView
            android:id="@+id/lodging_phone_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lodging_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_mail_textview" />

        <TextView
            android:id="@+id/lodging_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/lodging_description"
            app:layout_constraintBottom_toTopOf="@+id/lodging_booking_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lodging_phone_textview" />

        <Button
            android:id="@+id/lodging_booking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lodging_booking_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>